--- a/backend/package.json
+++ b/backend/package.json
@@ -4,17 +4,21 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "sucrase-node src/server",
-    "dev": "nodemon --exec sucrase-node src/server"
+    "start": "node src/server",
+    "dev": "nodemon src/server",
+    "test": "cross-env NODE_ENV=test jest"
   },
   "dependencies": {
     "celebrate": "^12.0.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
+    "jest": "^25.2.4",
     "knex": "^0.20.13",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
