--- a/backend/package.json
+++ b/backend/package.json
@@ -5,22 +5,26 @@
   "license": "MIT",
   "scripts": {
     "start": "node src/server",
-    "dev": "nodemon src/server",
+    "start:dev": "nodemon src/server",
     "test": "cross-env NODE_ENV=test jest"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "celebrate": "^12.0.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "helmet": "^3.22.0",
     "jest": "^25.2.4",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.13",
     "sqlite3": "^4.1.1",
     "supertest": "^4.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^25.2.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.10.1",
